--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "HW2"]
 	path = HW2
 	url = https://github.com/Boon-Jun/CS3245-HW2.git
+[submodule "HW4"]
+	path = HW4
+	url = https://github.com/Boon-Jun/CS3245-HW4.git
